Refactor core code